--- a/www/index.html
+++ b/www/index.html
@@ -38,7 +38,8 @@
             </div>
 			<input type="text"/>
         </div>
-        <script type="text/javascript" src="cordova.js"></script> 
+<!--         <script type="text/javascript" src="cordova.js"></script>  -->
+       <script src="phonegap.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
             app.initialize();
